frontend/test/should_fail/object_004.grg
using object_model_001;

rule test1 {
    a:A -x:e-> b:A;
    if {
        b.obj == x.obj;
        x.obj == a.obj*b.obj;
	}

    modify {
        eval {
            a.obj = null;
        }
    }
}
